[project]
name = "zonal-histogram-analysis"
version = "2.0.0"
description = "Enhanced zonal histogram analysis tool that processes each zone independently to prevent overlap artifacts, ensures complete class coverage from raster attribute tables, and provides accurate pixel counts for classified raster analysis"
authors = [
    {name = "Dorn Moore", email = "dorn@savingcranes.org", organization = "International Crane Foundation", department = "Conservation Technology"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "geopandas>=0.14.0",
    "rasterio>=1.3.0", 
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "dbfread>=2.0.0",
]
keywords = ["gis", "zonal-analysis", "raster", "geospatial", "habitat-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
zonal-histogram = "zonal_histogram_complete:main"

[project.urls]
Repository = "https://github.com/your-org/zonal-histogram-analysis"
Documentation = "https://github.com/your-org/zonal-histogram-analysis#readme"
Issues = "https://github.com/your-org/zonal-histogram-analysis/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "zonal_histogram_complete.py",
    "README.md",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "coverage>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ['py38']